Had to revert whole repo back to Java 11 to support Java Lambdas.